app/assets/stylesheets/website/featured_section.scss
@import "../shared/colours";
@import "../shared/utils/type_sizing";
@import "../shared/utils/type_stacks";
@import "../shared/utils/grid";
@import "../shared/utils/transitions";
@import "../shared/typography";

#content {
  section.featured_items {
    article {
      position: relative;
    }

    h2 {
      margin-bottom: 0;
      padding: 0.5em 0 0.75em 0;
      background: #fff;
      margin: 0;

      &:before, &:after {
        content: " ";
        width: 0;
        height: 0;
      	display: block;
      	position: absolute;
      	bottom: -10px;
      	right: 45%;
      };

      &:before {
        border-top: 10px solid #ddd;
      	right: 44.9%;
      	bottom: -11px;
      }

      a {
        display: block;
        padding: 0;
      }
    }

    p.summary {
      padding: 0;
      margin: 0 0 1em 0;

      a.read {
        display: block;
        @include type-13;
        margin-bottom: 0;
        margin-top: 0.875em;
      }
    }

    .meta {
      padding: 0.25em 0;
      margin: 0;
      text-align: right;
      color: #777;

      @media only screen and (min-width: 768px) {
      }

      :last-child {
        margin-right: 1em;
      }

      .time_remaining,.last_significant_change {
        font-style: italic;
      }
    }

    div.img {
      display: none;
      float: left;
      margin-bottom: 0.4285em;
      margin-bottom: 1.5em;
      margin-left: 1.25em;
      overflow: hidden;
      padding: 6px 6px 0 6px;
      max-width: 84px;
      width: 22%;

      a img {
        margin: 0;
        background-color: white;
        max-width: 82px; // 84px minus border
      }

      @media only screen and (min-width: 600px) {
        display: block; // only show in non-mobile layout
      }

      @media only screen and (min-width: 768px) {
        max-width: 120px;

        a img {
          max-width: 118px; // 120px minus border
        }
      }
    }

    .image_summary {
      padding-top: 1.2em;
      p.summary {
        border: none;
        margin-top: 0;
        @media only screen and (min-width: 600px) {
          float: left;
          width: 50%;
        }
      }
    }

    // single item

    div.g3f {
      @media only screen and (min-width: 600px) {
        h2 {
          &:before, &:after {
          	left: 20%;
          }
        }

        p.summary {
          max-width: 30em;
        }

        h2 a, .meta {
          border-right: 0;
        }
      }

      .meta {
        border-bottom: none;
      }
    }

    // two items

    div.g-half-flood {
      &:last-child {
        .meta {
          border-bottom: none;
        }
      }

      &:nth-child(2) {
        p.summary {
          border-right: none;
        }
      }

      @media only screen and (min-width: 600px) {
        .meta {
          border-bottom: none;
        }
      }

    }

    // three items

    div.g1f {

      &:first-child {
        @media only screen and (min-width: 600px) {
          width: 100%;
          div.image_summary {
            border-right: none;
          }

          p.summary, .meta {
            border-right: none;
          }
        }

        @media only screen and (min-width: 768px) {
          width: 33.3333333%;
          border-bottom: none;

          p.summary, .meta, div.image_summary {
          }

          div.image_summary {
            p.summary {
              border: none;
            }
          }
        }
      };

      &:last-child {
        p.summary {
          border-right: none;
        }

        @media only screen and (min-width: 600px) {
          .meta {
            border-right: none;
          }
        }
      }

      div.image_summary {
        @media only screen and (min-width: 600px) {
          div.img {
            max-width: 84px;
          }
          a img {
             max-width: 82px;
          }
        }
      }

      @media only screen and (min-width: 600px) {
        .meta {
          border-bottom: none;
        }
      }

    }

    div.g1f, div.g-half-flood {
      &:last-child {
        @media only screen and (max-width: 600px) {
          .meta, .image_summary {
            border-bottom: none;
          }
        }

        @media only screen and (min-width: 600px) {
          div.image_summary {
            border-right: none;
          }
        }

        @media only screen and (min-width: 768px) {
          h2, h2 a, p.summary, .meta {
            border-right: none;
          }
        }
      }
    }

  }

  section.featured_carousel {
    background: #eee;
    position: relative;
    overflow: hidden;
    padding: 0;

    article {
      width: 100%;
      padding: 0;
      min-height: 190px;

      .img {
        display: none;
        width: 100%;
        max-height: 480px;

        img {
          display: block;
          margin: 0;
          padding: 0;
        }

        @media only screen and (min-width: 600px) {
          display: block;
        }
      }
    }
  }

  .slider_wrap {
    position: relative;
    margin-bottom: 1.125em;

    .carousel-tabs {
      list-style: none;
      position: absolute;
      bottom: 30px;
      right: 48px;
      z-index: 160;
      width: 42px;

      @media only screen and (min-width: 600px) {
        bottom: 154px;
        right: 10%;
      }

      @media only screen and (min-width: 768px) {
        right: 10.5%;
      }

      li {
  		    display: inline-block;
  		    margin: 0;
  		    padding: 0 7.5%;
  		}

  		a {
  		    background: #fff;
  		    display: inline-block;
  		    height: 8px;
  		    text-indent: -9999px;
  		    width: 8px;
  		}
    }

		.carousel-active-tab { color: red; }

		.carousel-disabled,
		.carousel-tabs {
			padding: 0;
			margin: 0;
			clear: both;
		}

		.carousel-tabs .carousel-active-tab a {
			background: #777;
		}

    .slidecontrols{
      margin: 0;
      position: absolute;
      left: 0;
      top: 100px;
      width: 100%;
      z-index: 155;

      li {
        margin: 0;

        a {
          background-color: #ddd;
          background-image: url(/government/assets/carousel-arrows.png);
          background-repeat: no-repeat;
          display: block;
          height: 62px;
          margin: 0;
          position: absolute;
          text-indent: -9999px;
          top: 0;
          width: 48px;

          @include transition("left, right");

          &.carousel-prev {
            left: 0;
            background-position: 40% 6px;

            &.carousel-disabled {
              left: -48px;
            }
          }

          &.carousel-next {
            right: 0;
            background-position: 50% -96px;

            &.carousel-disabled {
              right: -48px;
            }
          }
        }

        a:hover, a:focus, a:active{
          outline:none;
        }
      }
    }
  }
}

#content {
  .organisation_news, .country_news {
    article.news_article {
      .img {
        overflow: hidden;

        img {
          @media only screen and (min-width: 768px) {
            margin-top: -5%;
          }
        }
      }
    }

    .news_body {
      @include flood_four_columns;
      background: #333;
      bottom: 0;
      left: 0;
      min-height: 190px;
      position: absolute;
      z-index: 100;

      @media only screen and (min-width: 600px) {
        width: 75%;
      }

      @media only screen and (min-width: 768px) {
        padding-left: 25%;
        width: 50%;
      }

      h2 {
        @include scaled_type(24,24);
        font-family: $gill;
        padding: 0 3.5%;
        margin-bottom: 0.75em;
        display: block;

        @media only screen and (min-width: 768px) {
          @include scaled_type(32,32);
          padding: 0 2.5% 0 1.5%;
          margin-bottom: 0.25em;
        }

        a {
          color: #fff;
          text-decoration: none;
          
          &:hover {
            text-decoration: underline;
          };
        }
      }

      .summary {
        @include type-14;
        font-family: $helvetica;
        color: #fff;
        padding: 0 72px 0 72px;
        margin-bottom: 0.75em;

        @media only screen and (min-width: 768px) {
          padding-left: 1.5%;
        }
      }

      div.meta {
        @include upcase_datetime;
        padding: 1.091em 3.5% 0 3.5%;
        color: #fff;

        @media only screen and (min-width: 768px) {
          padding: 1.091em 1.5% 0 1.5%;
        }
      }
    }
  }
}

.lte-ie8 {
  .slider_wrap {
    .carousel-tabs {
      li, a {
        display: block;
      	float: left;
      }
    }
  }
}

